test/e2e/features/metrics/testdata/setup-with-listenersets.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw1
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: HTTP
    port: 8088
    name: http-2
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: HTTPS
    port: 8443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: ls1
  namespace: default
spec:
  parentRef:
    name: gw1
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
  - name: foo
    protocol: HTTP
    port: 8081
    allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-ls1
  namespace: default
spec:
  parentRefs:
  - name: ls1
    group: gateway.networking.k8s.io
    kind: ListenerSet
  hostnames:
  - "example1-ls.com"
  - "example2-ls.com"
  rules:
    - backendRefs:
        - name: nginx
          namespace: nginx-shared
          port: 8080
